--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
             </ul>
         </div>
         <p></p>
-            <h4>Below are the initial blockchain data and apps to<br>
-        begin with the Content# Token Economic System.</h4>
+            <h4>Below are the initial blockchain data and apps to begin with the Content# Token Economic System.</h4>
         </p>
     </section>
     <main>
